Fixed overflow scrolling issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@ body{
   font-family: 'Raleway', "Trebuchet MS", sans-serif;
   line-height: 1.6;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .title-header {
